# MicroC

./: .gitignore  README.md  pyproject.toml
MicroC/: __init__.py  __main__.py  ast.py  ctx.py  eval.py  grammar.lark  transformer.py
examples/: escopo_global.mc
tests/: test_microc.py
